fix the initiate visibility of hovered memo

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,7 +218,7 @@ html{
 }
 
 .memo {
-
+visibility: hidden;
   font-family: "Merriweather", serif;
   font-weight: 400;
   font-style: normal;
